css/index.css
:root {
  --red: #C5004A;
  --darkred: #7F0036;
  --lightgray: #e0e0e0;
  --gray: #C0C0C0;
  --darkgray: #333;
  --navy: #17050F;
  --blue: #082840;
  --white: #fff;
}
* {
  box-sizing: border-box;
}
html,
body {
  padding: 0;
  margin: 0;
  font-family: system-ui, sans-serif;
  color: var(--darkgray);
  background-color: var(--white);
}
p:last-child {
  margin-bottom: 0;
}
p,
.tmpl-post li,
img {
  max-width: 37.5em; /* 600px /16 */
}
p,
.tmpl-post li {
  line-height: 1.45;
}
a[href] {
  color: var(--blue);
}
a[href]:visited {
  color: var(--navy);
}
main {
  padding: 1rem;
}
main :first-child {
  margin-top: 0;
}
header {
  border-bottom: 1px dashed var(--lightgray);
}
header:after {
  content: "";
  display: table;
  clear: both;
}
table {
  margin: 1em 0;
}
table td,
table th {
  padding-right: 1em;
}

pre,
code {
  font-family: Consolas, Menlo, Monaco, "Andale Mono WT", "Andale Mono", "Lucida Console", "Lucida Sans Typewriter", "DejaVu Sans Mono", "Bitstream Vera Sans Mono", "Liberation Mono", "Nimbus Mono L", "Courier New", Courier, monospace;
  line-height: 1.5;
}
pre {
  font-size: 14px;
  line-height: 1.375;
  direction: ltr;
  text-align: left;
  white-space: pre;
  word-spacing: normal;
  word-break: normal;
  -moz-tab-size: 2;
  -o-tab-size: 2;
  tab-size: 2;
  -webkit-hyphens: none;
  -moz-hyphens: none;
  -ms-hyphens: none;
  hyphens: none;
  padding: 1em;
  margin: .5em 0;
  background-color: #f6f6f6;
}
.highlight-line {
  display: block;
  padding: 0.125em 1em;
  text-decoration: none; /* override del, ins, mark defaults */
  color: inherit; /* override del, ins, mark defaults */
}

/* allow highlighting empty lines */
.highlight-line:empty:before {
  content: " ";
}
/* avoid double line breaks when using display: block; */
.highlight-line + br {
  display: none;
}

.highlight-line-isdir {
  color: #b0b0b0;
  background-color: #222;
}
.highlight-line-active {
  background-color: #444;
  background-color: hsla(0, 0%, 27%, .8);
}
.highlight-line-add {
  background-color: #45844b;
}
.highlight-line-remove {
  background-color: #902f2f;
}

/* Header */
.home {
  padding: 0 1rem;
  float: left;
  margin: 1rem 0; /* 16px /16 */
  font-size: 1em; /* 16px /16 */
}
.home :link:not(:hover) {
  text-decoration: none;
}

/* Nav */
.nav {
  padding: 0;
  list-style: none;
  float: left;
  margin-left: 1em;
}
.nav-item {
  display: inline-block;
  margin-right: 1em;
}
.nav-item a[href]:not(:hover) {
  text-decoration: none;
}
.nav-item-active {
  font-weight: 700;
  text-decoration: underline;
}

/* Posts list */
.postlist {
  list-style: none;
  padding: 0;
}
.postlist-item {
  counter-increment: start-from -1;
}
.postlist-item:before {
  display: inline-block;
  pointer-events: none;
  content: "" counter(start-from, decimal-leading-zero) ". ";
  line-height: 100%;
  text-align: right;
}
.postlist-date,
.postlist-item:before {
  font-size: 0.8125em; /* 13px /16 */
  color: var(--darkgray);
}
.postlist-date {
  word-spacing: -0.5px;
}
.postlist-link {
  display: inline-block;
  padding: 0.25em 0.1875em; /* 4px 3px /16 */
}
.postlist-item-active .postlist-link {
  font-weight: bold;
}
.tmpl-home .postlist-link {
  font-size: 1.1875em; /* 19px /16 */
  font-weight: 700;
}


/* Tags */
.tag {
  display: inline-block;
  vertical-align: text-top;
  text-transform: uppercase;
  font-size: 0.625em; /* 10px /16 */
  padding: 2px 4px;
  margin-left: 0.8em; /* 8px /10 */
  background-color: var(--red);
  color: var(--white);
  border-radius: 0.25em; /* 3px /12 */
  text-decoration: none;
}
a[href].tag,
a[href].tag:visited {
  color: #fff;
}

/* Warning */
.warning {
  background-color: #ffc;
  padding: 1em 0.625em; /* 16px 10px /16 */
}
.warning ol:only-child {
  margin: 0;
}

/* Direct Links / Markdown Headers */
.direct-link {
  font-family: sans-serif;
  text-decoration: none;
  font-style: normal;
  margin-left: .1em;
}
a[href].direct-link,
a[href].direct-link:visited {
  color: transparent;
}
a[href].direct-link:focus,
a[href].direct-link:focus:visited,
:hover > a[href].direct-link,
:hover > a[href].direct-link:visited {
  color: #aaa;
}

/* -------------------------------- CUSTOM STUFF -------------------------------- */

/* fonts */

html, body {
  font-family: 'Crimson Text', Garamond, serif;
  color: black;
  font-size: 22px;
  font-weight: 400;
  -webkit-font-smoothing: antialiased;
}

h1, h2, h3, h4, h5, h6, h7, a.postlist-link, header {
  font-family: 'Futura Md BT', 'Futura', 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
}

a.tag {
  font-family: 'Futura BdCn BT', 'Futura', 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
  font-size: 16px;
}

/* header */

header {
  border-image: linear-gradient(to right,rgb(40,93,165), rgb(192,60,64)) 100% 1;
  border-bottom-width: 0.5rem;
}

header .holder {
  max-width: 1156px;
  margin: 0 auto;
}

header .head-desc {
  clear: both;
  margin-left: 1rem;
  margin-bottom: 1rem;
  font-family: 'Futura Bk BT', 'Futura', 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
}

header ul.nav li {
  margin-right: 0.5rem;
}

header ul.nav li a {
  font-size: 18px;
  text-transform: uppercase;
  color: #333333;
}

header ul.nav li.nav-item-active {
  text-decoration: none;
  color: #000000;
}

/* main content */

main {
  max-width: 1156px;
  margin: 0 auto;
}

/* post list */

ol.postlist li.postlist-item {
  margin-bottom: 2rem;
}

ol.postlist li.postlist-item p {
  margin: 0 0 0.5rem 0;
}

/* tags */

a.tag {
  border-radius: 0;
  background-color: #243b5e;
  margin: 0 0.5rem 0 0;
}

/* post */

main.tmpl-post p, main.tmpl-post h1, main.tmpl-post h2, main.tmpl-post h3, main.tmpl-post ul, main.tmpl-post ol {
  max-width: 680px;
  margin: 0 auto;
  margin-bottom: 1rem;
}

main.tmpl-post figure, main.tmpl-post figure img {
  text-align: center;
  max-width: none;
}

main.tmpl-post p.closeout {
  margin-top: 1rem;
  margin-bottom: 1rem;
}

main.tmpl-post figcaption {
  font-style: italic;
  font-size: 0.8rem;
}

